# folio

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  publish.sh
.github/workflows/: release.yml
src/: command_displayer.rs  command_parser.rs  commands_collections.rs  controllers.rs  error.rs  gh_reqwestor.rs  gh_token_getter.rs  input_getter.rs  main.rs  remote_controller.rs  remote_manager.rs
src/command_controller/: folio_dialoguer.rs  fs_utils.rs  mod.rs  project_controller.rs  remote_controller.rs
src/command_controller/fs_utils_tests/: get_readme_content_tests.rs  mod.rs
src/command_controller/gh_fetchers/: mod.rs
src/command_controller/gh_fetchers/gh_project_fetcher/: mod.rs
src/command_parser/: command.rs  commands_collection.rs  input_parser.rs  mod.rs
src/command_parser/input_parser_tests/: mod.rs  str_is_valid_path_tests.rs
src/commands_controller/: mod.rs  project_controller.rs  remote_controller.rs
src/content_displayer/: mod.rs  table_displayer.rs
src/controllers/: project_controller.rs  remote_controller.rs
src/controllers/project_controller/: model.rs
src/controllers/remote_controller/: model.rs
src/error/: folio_error.rs  gh_reqwestor_error.rs  missing_gh_token_error.rs  mod.rs  parse_command_error.rs
src/gh_fetchers/: mod.rs
src/gh_fetchers/gh_project_fetcher/: mod.rs  model.rs
src/gh_fetchers/gh_remote_fetcher/: mod.rs
src/remote_controller/: model.rs
src/tests/: mod.rs
src/tests/input_parser_tests/: is_json_display_tests.rs  mod.rs  str_is_valid_path_tests.rs
(+17 files in other folders)
