[package]
name = "folio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["default", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"]}
tabled = { version = "0.15.0", features = ["std", "derive", "ansi"]}
terminal_size = "0.3.0"
